finish UI/UX - tambah halaman favorites

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_svg: ^2.2.1   # versi terbaru null safe
-  animations: ^2.0.6     # versi terbaru null safe
+  flutter_svg: ^2.2.1   
+  animations: ^2.0.6     
 
 dev_dependencies:
   flutter_lints: ^5.0.0
