--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.1   
   animations: ^2.0.6     
+  provider: ^6.0.5
+  palette_generator: ^0.3.3+3     
 
 dev_dependencies:
   flutter_lints: ^5.0.0
